tests/invalid-use/use_dependant_ref_after_drop.stderr
error[E0505]: cannot move out of `data` because it is borrowed
  --> $DIR/use_dependant_ref_after_drop.rs:16:21
   |
15 |       let dependant_ref = data.dependant::<MyStruct>();
   |                           ---- borrow of `data` occurs here
16 |       core::mem::drop(data);
   |                       ^^^^ move out of `data` occurs here
17 | /     assert_eq!(
18 | |         dependant_ref,
19 | |         &MyStruct(&[1, 2, 3])
20 | |     )
   | |_____- borrow later used here
